fixed project details on mobile

--- a/assets/css/input.scss
+++ b/assets/css/input.scss
@@ -91,14 +91,10 @@ main {
     .parallax-container {
         height: 200px;
     }
-}
-@media (transition: none) {
     .animatedDetails {
         position: absolute;
-        bottom: 0;
+        bottom: -150px;
         font-size: 18px;
-        transition: none;
-        transform: none;
-        color: red;
+        padding-left: 10px;
     }
 }
